stateDiagram-v2
    [*] --> in_progress: Recording starts<br/>(WebSocket connects)
    in_progress --> processing: Recording ends<br/>(POST /v1/conversations<br/>or timeout)
    processing --> completed: Successfully processed
    processing --> failed: Error occurred
    completed --> [*]
    failed --> processing: Retry

    note right of processing
        LLM extracts structure
        Memories extracted
        Embeddings generated
    end note